# odecrafters-shell-rust

./: Cargo.toml  README.md  codecrafters.yml  your_shell.sh
src/: main.rs  trie.rs
